<resources>
    <string name="app_name">Sainik</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome">Welcome</string>
    <string name="register_now">Register Now</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="fill_your_details">FILL YOUR DETAILS</string>
    <string name="name">Name</string>
    <string name="e_mail">E-mail</string>
    <string name="phone">Phone</string>
    <string name="register">Register</string>
</resources>